k8s/staging/app/postgres-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: vim-db-staging
  namespace: umil
spec:
  type: ExternalName
  externalName: postgres-umil-staging.postgres.svc.cluster.local
