k8s/staging/app/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: vim-app-staging
  namespace: umil
spec:
  selector:
    app: umil-app-staging
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
